...
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <foundation.e.blisslauncher.core.customviews.SquareFrameLayout
            android:id="@+id/app_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hapticFeedbackEnabled="false">

            <foundation.e.blisslauncher.core.customviews.SquareImageView
...
                layout="@layout/calendar_icon"
                android:visibility="gone" />

        </foundation.e.blisslauncher.core.customviews.SquareFrameLayout>

        <TextView
            android:id="@+id/app_label"
            fontPath="Roboto-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="center"
...
