...

            <include
                android:id="@+id/search_and_app_suggestions_layout"
                layout="@layout/layout_search_suggestion" />

            <include
                android:id="@+id/weather_info_layout"
                layout="@layout/layout_weather_info" />

            <FrameLayout
                android:id="@+id/drag_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </FrameLayout>

            <Button
                android:id="@+id/edit_widgets_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_rounded_corner"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit" />
...
